--- a/ansible/roles/makinastates_setup/tasks/main.yml
+++ b/ansible/roles/makinastates_setup/tasks/main.yml
@@ -5,7 +5,7 @@
     - python
     - git
     - curl
-  tags: [makinastates_setup]
+  tags: [makinastates, makinastates_setup]
 
 - name: test ms dir
   shell: test -e "{{makinastates_dest}}/.git/config";echo $?
@@ -16,27 +16,27 @@
   git: repo="{{makinastates_repo}}"
        dest="{{makinastates_dest}}"
        version="{{makinastates_version}}"
-  tags: [makinastates_setup]
+  tags: [makinastates, makinastates_setup]
   when: makinastates_testmsdir.stdout == "1"
 
 - name: run makina-states setup
-  shell: >
-         {{makinastates_dest}}/bin/boot-salt.sh -C
+  shell: |
+         {{makinastates_dest}}/bin/boot-salt.sh -C \
           {{(makinastates_repo is not none) | ternary(
-            '-g {0}'.format(makinastates_repo), '') }}
+            '-g {0}'.format(makinastates_repo), '') }} \
           {{(makinastates_version is not none) | ternary(
-            '-b {0}'.format(makinastates_version), '') }}
+            '-b {0}'.format(makinastates_version), '') }} \
           {{(makinastates_nodetype is not none) | ternary(
-            '-n {0}'.format(makinastates_nodetype), '') }}
+            '-n {0}'.format(makinastates_nodetype), '') }} \
           {{(makinastates_ansible_repo is not none) | ternary(
-            '--ansible-url {0}'.format(makinastates_ansible_repo), '') }}
+            '--ansible-url {0}'.format(makinastates_ansible_repo), '') }} \
           {{(makinastates_ansible_version is not none) | ternary(
-            '--ansible-branch {0}'.format(makinastates_ansible_version), '') }}
+            '--ansible-branch {0}'.format(makinastates_ansible_version), '') }} \
           {{(makinastates_salt_repo is not none) | ternary(
-            '--salt-url {0}'.format(makinastates_salt_repo), '') }}
+            '--salt-url {0}'.format(makinastates_salt_repo), '') }} \
           {{(makinastates_salt_version is not none) | ternary(
             '--salt-branch {0}'.format(makinastates_salt_version), '') }}
-  tags: [makinastates_setup]
+  tags: [makinastates, makinastates_setup]
 
 - name: test salt & ansible usuability
   shell: bin/{{item}} --version
@@ -45,4 +45,4 @@
   with_items:
     - salt-call
     - ansible
-  tags: [makinastates_setup]
+  tags: [makinastates, makinastates_setup]
