--- a/ansible/roles/makinastates_cloud_compute_node/tasks/lxc.yml
+++ b/ansible/roles/makinastates_cloud_compute_node/tasks/lxc.yml
@@ -4,3 +4,9 @@
             function=state.sls
             args='makina-states.cloud.lxc.compute_node.install_lxc'
   tags: makinastates_cloud_cn,makinastates_cloud_cn_lxc
+
+- name: cloud - lxc ssh mappings
+  saltcall: >
+            function=state.sls
+            args='makina-states.cloud.lxc.compute_node.install_lxc'
+  tags: makinastates_cloud_cn,makinastates_cloud_cn_lxc
