--- a/ansible/roles/makinastates_cloud_compute_node/tasks/main.yml
+++ b/ansible/roles/makinastates_cloud_compute_node/tasks/main.yml
@@ -5,12 +5,6 @@
             args='makina-states.cloud.generic.compute_node.hostsfile'
   tags: makinastates_cloud_cn,makinastates_cloud_cn_hostfiles
 
-- name: cloud - sshkeys
-  saltcall: >
-            function=state.sls
-            args='makina-states.cloud.generic.compute_node.sshkeys'
-  tags: makinastates_cloud_cn,makinastates_cloud_cn_ssh
-
 - name: cloud - sslcerts
   saltcall: >
             function=state.sls
@@ -28,3 +22,19 @@
             function=state.sls
             args='makina-states.cloud.generic.compute_node.reverse_proxy'
   tags: makinastates_cloud_cn,makinastates_cloud_cn_rp
+
+# - name: check var status
+#   debug:
+#     msg: |
+#          {{salt_pillar.get('makina-states.cloud', {}).get(
+#           'is', {}).get(
+#             'lxc_compute_node', False)}}
+#   tags: makinastates_cloud_cn,makinastates_cloud_cn_lxc,makinastates_cloud_cn_lxc_test
+
+- name: cloud - lxc
+  include: lxc.yml
+  when: |
+        salt_pillar.get('makina-states.cloud', {}).get(
+          'is', {}).get(
+            'lxc_compute_node', False) == True
+  tags: makinastates_cloud_cn,makinastates_cloud_cn_lxc
