--- a/ansible/roles/makinastates_pillar/tasks/main.yml
+++ b/ansible/roles/makinastates_pillar/tasks/main.yml
@@ -2,7 +2,7 @@
 # install local pillar
 - name: pillar sync
   template:
-    src=./roles/makinastates_pillar/templates/pillar.json
+    src=../templates/pillar.json
     dest={{makinastates_dest}}/pillar/private.pillar.d/makinastates.json
     mode=0600
   tags: [makinastates_pillar]
