ansible/lxc WIP

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -12,7 +12,7 @@
 # some basic default values...
 
 #inventory      = /etc/ansible/hosts
-library        = library:../library:../../library:./ansible/library
+library        = library:../library:../../library:../../library:./ansible/library
 #remote_tmp     = $HOME/.ansible/tmp
 #forks          = 5
 #poll_interval  = 15
@@ -32,7 +32,7 @@ library        = library:../library:../../library:./ansible/library
 #gathering = implicit
 
 # additional paths to search for roles in, colon separated
-roles_path    = roles:../roles:../../roles:./ansible/roles
+roles_path    = roles:../roles:../../roles:../../../roles:./ansible/roles
 
 # uncomment this to disable SSH key host checking
 host_key_checking = False
