ansible/lxc WIP

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -134,7 +134,7 @@ host_key_checking = False
 
 
 # set plugin path directories here, separate with colons
-#action_plugins     = /usr/share/ansible/plugins/action
+action_plugins        = action_plugins:../action_plugins:../../action_plugins:../../action_plugins:./ansible/action_plugins
 #callback_plugins   = /usr/share/ansible/plugins/callback
 #connection_plugins = /usr/share/ansible/plugins/connection
 #lookup_plugins     = /usr/share/ansible/plugins/lookup
