--- a/ansible/roles/makinastates_lxc_create/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/main.yml
@@ -1,18 +1,19 @@
 ---
+# map computation from lxcvar role back to clean variables
 - include: lxc.yml
-  # map computation from lxcvar role back to clean variables
   vars:
-    lxc_container_name: "{{makinastates_lxc_vars.lxc_container_name}}"
-    lxc_backing_store: "{{makinastates_lxc_vars.lxc_backing_store}}"
-    lxc_template: "{{makinastates_lxc_vars.lxc_template}}"
-    lxc_template_options: "{{makinastates_lxc_vars.lxc_template_options}}"
-    lxc_from_container: "{{makinastates_lxc_vars.lxc_container_name}}"
-    lxc_clone_snapshot: "{{makinastates_lxc_vars.lxc_clone_snapshot}}"
-    lxc_eth0_mac: "{{makinastates_lxc_vars.lxc_eth0_mac}}"
-    lxc_eth0_bridge: "{{makinastates_lxc_vars.lxc_eth0_bridge}}"
-    lxc_eth0_ip: "{{makinastates_lxc_vars.lxc_eth0_ip}}"
-    lxc_eth0_gateway: "{{makinastates_lxc_vars.lxc_eth0_gateway}}"
-    lxc_eth1_mac: "{{makinastates_lxc_vars.lxc_eth1_mac}}"
-    lxc_eth1_bridge: "{{makinastates_lxc_vars.lxc_eth1_bridge}}"
-    lxc_eth1_ip: "{{makinastates_lxc_vars.lxc_eth1_ip}}"
-    lxc_eth1_gateway: "{{makinastates_lxc_vars.lxc_eth1_gateway}}" 
+    lxc_container_name: "{{makinastates_lxc_vars.msg['lxc_container_name']}}"
+    lxc_pip: "{{makinastates_lxc_vars.msg['lxc_pip']}}"
+    lxc_backing_store: "{{makinastates_lxc_vars.msg['lxc_backing_store']}}"
+    lxc_template: "{{makinastates_lxc_vars.msg['lxc_template']}}"
+    lxc_template_options: "{{makinastates_lxc_vars.msg['lxc_template_options']}}"
+    lxc_from_container: "{{makinastates_lxc_vars.msg['lxc_from_container']}}"
+    lxc_clone_snapshot: "{{makinastates_lxc_vars.msg['lxc_clone_snapshot']}}"
+    lxc_eth0_mac: "{{makinastates_lxc_vars.msg['lxc_eth0_mac']}}"
+    lxc_eth0_bridge: "{{makinastates_lxc_vars.msg['lxc_eth0_bridge']}}"
+    lxc_eth0_ip: "{{makinastates_lxc_vars.msg['lxc_eth0_ip']}}"
+    lxc_eth0_gateway: "{{makinastates_lxc_vars.msg['lxc_eth0_gateway']}}"
+    lxc_eth1_mac: "{{makinastates_lxc_vars.msg['lxc_eth1_mac']}}"
+    lxc_eth1_bridge: "{{makinastates_lxc_vars.msg['lxc_eth1_bridge']}}"
+    lxc_eth1_ip: "{{makinastates_lxc_vars.msg['lxc_eth1_ip']}}"
+    lxc_eth1_gateway: "{{makinastates_lxc_vars.msg['lxc_eth1_gateway']}}"
