--- a/ansible/roles/makinastates_lxc_vars/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/tasks/main.yml
@@ -5,6 +5,7 @@
   debug:
     msg:
       lxc_container_name: "{{lxc_container_name}}"
+      lxc_pip: "{{lxc_pip}}"
       lxc_backing_store: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
             'profile', {}).get(
@@ -21,7 +22,7 @@
       lxc_clone_snapshot: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
           'clone_snapshot', lxc_clone_snapshot)}}"
-      lxc_eth0_mac: "{{ 
+      lxc_eth0_mac: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get( lxc_container_name, {}).get(
           'network_profile', {}).get(
           'eth0', {}).get(
@@ -35,28 +36,28 @@
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
           'network_profile', {}).get(
           'eth0', {}).get(
-            'link', lxc_eth0_ip)}}" 
+            'link', lxc_eth0_ip)}}"
       lxc_eth0_gateway: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
           'network_profile', {}).get(
           'eth0', {}).get(
-            'gateway', lxc_eth0_gateway)}}" 
+            'gateway', lxc_eth0_gateway)}}"
       lxc_eth1_mac: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
         'network_profile', {}).get(
          'eth1', {}).get(
-           'hwaddr', lxc_eth1_mac)}}" 
+           'hwaddr', lxc_eth1_mac)}}"
       lxc_eth1_bridge: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
         'network_profile', {}).get(
           'eth1', {}).get(
-            'link', lxc_eth1_bridge)}}" 
+            'link', lxc_eth1_bridge)}}"
       lxc_eth1_ip: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
         'network_profile', {}).get(
           'eth1', {}).get(
-            'hwaddr', lxc_eth1_ip)}}" 
-      lxc_eth0_gateway: "{{
+            'hwaddr', lxc_eth1_ip)}}"
+      lxc_eth1_gateway: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
         'network_profile', {}).get(
           'eth1', {}).get(
