--- a/ansible/roles/makinastates_lxc_create/tasks/from_template.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/from_template.yml
@@ -1,24 +1,24 @@
 ---
-- name: lxc config (from template script)
-  lxc_container:
-    name: "{{lxc_container_name}}"
-    backing_store: "{{lxc_backing_store}}"
-    template: "{{lxc_template|ternary(lxc_template, none)}}"
-    template_options: "{{lxc_template_options}}"
-    container_config:
-      - "lxc.start.auto = 1"
-      - "lxc.network.type = veth"
-      - "lxc.network.name = eth0"
-      - "lxc.network.flags = up"
-      - "{{(lxc_eth0_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth0_bridge), '#')}}"
-      - "{{(lxc_eth0_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth0_gateway), '#')}}"
-      - "{{(lxc_eth0_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth0_mac), '#')}}"
-      - "{{(lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge)|ternary('lxc.network.name = eth1', '#')}}"
-      - "{{(lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge)|ternary('lxc.network.flags = up', '#')}}"
-      - "{{(lxc_eth1_bridge)|ternary('lxc.network.link = {0}'.format(lxc_eth1_bridge), '#')}}"
-      - "{{(lxc_eth1_mac)|ternary('lxc.network.hwaddr = {0}'.format(lxc_eth1_mac), '#')}}"
-      - "{{(lxc_eth1_ip)|ternary('lxc.network.ipv4 = {0}'.format(lxc_eth1_ip), '#')}}"
-      - "{{((lxc_eth1_mac or lxc_eth1_ip or lxc_eth1_bridge) and lxc_eth1_gateway)|ternary('lxc.network.gateway = {0}'.format(lxc_eth1_gateway), '#')}}"
+- name: lxc create test (from template script)
+  shell: |
+         lxc-ls --fancy |grep -v ^NAME|awk '{print $1}'|egrep -q "^{{lxc_container_name}}$";echo $?
+  register: makinastates_lxc_create_lxc_test
+  tags: makinastates_lxc_create,makinastates_lxc_create_lxc 
+- name: lxc create (from template script)
+  shell: "lxc-create -t {{lxc_template}} -n {{lxc_container_name}} -B {{lxc_backing_store}} -- {{lxc_template_options}}"
+  when: 'makinastates_lxc_create_lxc_test.stdout != "0"' 
   tags: makinastates_lxc_create,makinastates_lxc_create_lxc
-
-
+- name: lxc config (from template script)
+  template:
+    src: "../templates/lxc.conf"
+    dest: "{{lxc_path}}/{{lxc_container_name}}/config"
+    mode: 600
+  notify: "RestartContainer{{lxc_container_name}}"
+  tags: makinastates_lxc_create,makinastates_lxc_create_lxc
+- name: "StartContainer{{lxc_container_name}}"
+  shell: |
+         set -ex
+         if ! lxc-ls --fancy|egrep "^{{lxc_container_name}} "|awk '{print $2}'|grep -qi running;then
+           lxc-start -d -n "{{lxc_container_name}}" 
+         fi
+  tags: makinastates_lxc_create,makinastates_lxc_create_lxc
