--- a/ansible/roles/makinastates_lxc_create/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/main.yml
@@ -18,3 +18,5 @@
     lxc_eth1_bridge: "{{makinastates_lxc_vars.msg['lxc_eth1_bridge']}}"
     lxc_eth1_ip: "{{makinastates_lxc_vars.msg['lxc_eth1_ip']}}"
     lxc_eth1_gateway: "{{makinastates_lxc_vars.msg['lxc_eth1_gateway']}}"
+    lxc_os_mirror: "{{makinastates_lxc_vars.msg['lxc_os_mirror']}}"
+    lxc_os_release: "{{makinastates_lxc_vars.msg['lxc_os_release']}}"
