--- a/ansible/roles/makinastates_lxc_vars/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/tasks/main.yml
@@ -6,6 +6,8 @@
     msg:
       lxc_path: "{{lxc_path}}"
       lxc_container_name: "{{lxc_container_name}}"
+      lxc_os_release: "{{lxc_os_release}}"
+      lxc_os_mirror: "{{lxc_os_mirror}}"
       lxc_pip: "{{lxc_pip}}"
       lxc_backing_store: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
