--- a/files/etc/mysql/conf.d/local.cnf
+++ b/files/etc/mysql/conf.d/local.cnf
@@ -1,4 +1,7 @@
 {% set data = salt['mc_utils.json_load'](data) %}
+{% set mysql57onward = grains['os'] in 'Ubuntu' and grains['osrelease'] >= '16.04' %}
+{% set mysql55onward = grains['os'] in 'Ubuntu' and grains['osrelease'] >= '15.04' %}
+{% set mysql55downward = grains['os'] in 'Ubuntu' and grains['osrelease'] <= '15.04' %}
 #
 # Salt managed MySQL settings -- DO NOT EDIT
 # This file is managed by the mysql_base() salt macro from makina-states.services.db.mysql
@@ -51,7 +54,9 @@ innodb_log_buffer_size          = {{ data.innodb_log_buffer_size_M }}M
 innodb_flush_log_at_trx_commit  = {{ data.innodb_flush_log_at_trx_commit }}
 innodb_thread_concurrency       = {{ data.innodb_thread_concurrency }}
 innodb_flush_method             = {{ data.innodb_flush_method }}
+{% if mysql55downward %}
 innodb_additional_mem_pool_size = {{ data.innodb_additional_mem_pool_size_M }}M
+{% endif %}
 innodb_write_io_threads         =8
 innodb_read_io_threads          =8
 innodb_io_capacity              =500
@@ -77,12 +82,16 @@ thread_cache_size       = 50
 sort_buffer_size = 2M
 # This replaces the startup script and checks MyISAM tables if needed
 # the first time they are touched
+{% if not mysql57onward %}
 myisam-recover         = BACKUP
+{% endif %}
 
 table_open_cache            = {{ data.table_open_cache }}
 table_definition_cache	    = {{ data.table_definition_cache }}
-open-files-limit             = {{ data.open_file_limit }}
+{% if mysql55downward %}
+open-files-limit            = {{ data.open_file_limit }}
 open-files                  = {{ data.open_file_limit }}
+{% endif %}
 # tmp_table_size & max_heap_table_size should always be the same
 # temp tables for requests bigger than that became physical, slow, temp tables
 # defaut 16Mo
@@ -107,7 +116,7 @@ query_cache_size    = {{ data.query_cache_size_M }}M
 # Error logging goes to syslog due to /etc/mysql/conf.d/mysqld_safe_syslog.cnf.
 #
 # Here you can see queries with especially long duration
-{% if grains['os'] in 'Ubuntu' and grains['osrelease'] >= '15.04' %}
+{% if mysql55onward %}
 slow_query_log_file	= {{data.var_log}}/mysql-slow.log
 {% else %}
 log_slow_queries	= {{data.var_log}}/mysql-slow.log
