--- a/files/etc/systemd/system/overrides.d/mysql.conf
+++ b/files/etc/systemd/system/overrides.d/mysql.conf
@@ -1,2 +1,5 @@
 [Unit]
 After=syslog.target network.target remote-fs.target nss-lookup.target
+[Service]
+LimitNOFILE=infinity
+LimitMEMLOCK=infinity
