rework php part of @regilero pr

--- a/files/etc/php5/mods-available/apcu.ini
+++ b/files/etc/php5/mods-available/apcu.ini
@@ -1,20 +1,21 @@
 ;;;;;;;;;;;;;;
 ; APC        ;
 ;;;;;;;;;;;;;;
+{% set data = salt['mc_php.settings']() %}
 extension=apcu.so
 
-apc.enable_cli={{enable_cli}}
+apc.enable_cli={{data.apc_enable_cli}}
 ; shared memory --------------
 ; seems to perform better with only one shared segment
 ; but if you cannot upgrade this segment size, then create several
 ; setting ignored in mmap mode (so chances are this will always be 1)
-apc.shm_segments={{ shm_segments }}
+apc.shm_segments={{ data.apc_shm_segments }}
 ; so here the segment size, but you may need to allow it in your OS
 ; for 128M Put in /etc/sysctl.conf:
 ; * kernel.shmmax=134217728
 ; * kernel.shmall=2097152
 ; default in most OS is 32M
-apc.shm_size={{ shm_size }}
+apc.shm_size={{ data.apc_shm_size }}
 ; If compiled with MMAP support by using --enable-mmap this is the mktemp-style file_mask to pass to the mmap module
 ; for determining whether your mmap'ed memory region is going to be file-backed or shared memory backed
-apc.mmap_file_mask={{ mmap_file_mask }}
+apc.mmap_file_mask={{ data.apc_mmap_file_mask}}
