--- a/files/etc/redis/redis.conf
+++ b/files/etc/redis/redis.conf
@@ -137,9 +137,13 @@ unixsocketperm {{redis.unixsocketperm}}
 #
 #   save ""
 
+{% if redis.save %}
 {% for i in redis.save %}
 save {{i}}
 {% endfor %}
+{% else %}
+# save ....
+{% endif %}
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
