--- a/files/etc/redis/redis.conf
+++ b/files/etc/redis/redis.conf
@@ -40,6 +40,15 @@
 # If port 0 is specified Redis will not listen on a TCP socket.
 {{config('port')}}
 
+# TCP listen() backlog.
+#
+# In high requests-per-second environments you need an high backlog in order
+# to avoid slow clients connections issues. Note that the Linux kernel
+# will silently truncate it to the value of /proc/sys/net/core/somaxconn so
+# make sure to raise both the value of somaxconn and tcp_max_syn_backlog
+# in order to get the desired effect.
+{{config('tcp-backlog')}}
+
 # By default Redis listens for connections from all the network interfaces
 # available on the server. It is possible to listen to just one or multiple
 # interfaces using the "bind" configuration directive, followed by one or
@@ -189,6 +198,8 @@ save {{i}}
 {{config('dir')}}
 
 ################################# REPLICATION #################################
+# experimental:
+repl-diskless-sync no
 
 # Master-Slave replication. Use slaveof to make a Redis instance a copy of
 # another Redis server. Note that the configuration is local to the slave
@@ -451,7 +462,8 @@ slave-priority {{redis['slave-priority']}}
 appendonly {{redis.appendonly}}
 
 # The name of the append only file (default: "appendonly.aof")
-# appendfilename appendonly.aof
+appendfilename "appendonly.aof"
+aof-load-truncated yes
 
 # The fsync() call tells the Operating System to actually write data on disk
 # instead to wait for more data in the output buffer. Some OS will really flush
@@ -562,6 +574,28 @@ no-appendfsync-on-rewrite {{redis['no-appendfsync-on-rewrite']}}
 # You can reclaim memory used by the slow log with SLOWLOG RESET.
 {{config('slowlog-max-len')}}
 
+################################ LATENCY MONITOR ##############################
+
+# The Redis latency monitoring subsystem samples different operations
+# at runtime in order to collect data related to possible sources of
+# latency of a Redis instance.
+#
+# Via the LATENCY command this information is available to the user that can
+# print graphs and obtain reports.
+#
+# The system only logs operations that were performed in a time equal or
+# greater than the amount of milliseconds specified via the
+# latency-monitor-threshold configuration directive. When its value is set
+# to zero, the latency monitor is turned off.
+#
+# By default latency monitoring is disabled since it is mostly not needed
+# if you don't have latency issues, and collecting data has a performance
+# impact, that while very small, can be measured under big load. Latency
+# monitoring can easily be enalbed at runtime using the command
+# "CONFIG SET latency-monitor-threshold <milliseconds>" if needed.
+{{config('latency-monitor-threshold')}}
+
+
 ############################# Event notification ##############################
 
 # Redis can notify Pub/Sub clients about events happening in the key space.
@@ -635,6 +669,20 @@ no-appendfsync-on-rewrite {{redis['no-appendfsync-on-rewrite']}}
 {{config('zset-max-ziplist-entries')}}
 {{config('zset-max-ziplist-value')}}
 
+# HyperLogLog sparse representation bytes limit. The limit includes the
+# 16 bytes header. When an HyperLogLog using the sparse representation crosses
+# this limit, it is converted into the dense representation.
+#
+# A value greater than 16000 is totally useless, since at that point the
+# dense representation is more memory efficient.
+#
+# The suggested value is ~ 3000 in order to have the benefits of
+# the space efficient encoding without slowing down too much PFADD,
+# which is O(N) with the sparse encoding. The value can be raised to
+# ~ 10000 when CPU is not a concern, but space is, and the data set is
+# composed of many HyperLogLogs with cardinality in the 0 - 15000 range.
+{{config('hll-sparse-max-bytes')}}
+
 # Active rehashing uses 1 millisecond every 100 milliseconds of CPU time in
 # order to help rehashing the main Redis hash table (the one mapping top-level
 # keys to values). The hash table implementation Redis uses (see dict.c)
@@ -662,9 +710,9 @@ no-appendfsync-on-rewrite {{redis['no-appendfsync-on-rewrite']}}
 #
 # The limit can be set differently for the three different classes of clients:
 #
-# normal -> normal clients
-# slave  -> slave clients and MONITOR clients
-# pubsub -> clients subcribed to at least one pubsub channel or pattern
+# normal -> normal clients including MONITOR clients
+# slave  -> slave clients
+# pubsub -> clients subscribed to at least one pubsub channel or pattern
 #
 # The syntax of every client-output-buffer-limit directive is the following:
 #
